# nb_venv_kernels

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  Makefile  NB_CONDA_ENV_DISCOVERY.md  README.md  RELEASE.md  conftest.py  install.json  package-lock.json  package.json  pyproject.toml  rename_symbols.sh
.claude/: CLAUDE.md  JOURNAL.md  JOURNAL_ARCHIVE.md
.github/workflows/: build.yml  check-release.yml  prep-release.yml
doc/: API.md  INTEGRATION_TESTS.md  NB_CONDA_ENV_DISCOVERY.md  NB_VENV_KERNELS_MECHANICS.md
docs/: defects.md
jupyter-config/: jupyter_config.json
jupyter-config/notebook-config/: nb_venv_kernels.json
jupyter-config/server-config/: nb_uv_kernel.json  nb_venv_kernel.json  nb_venv_kernels.json
nb_uv_kernels/: __init__.py  cli.py  manager.py  routes.py  runner.py
nb_uv_kernels/tests/: __init__.py  test_routes.py
nb_venv_kernels/: __init__.py  cli.py  manager.py  registry.py  routes.py  runner.py  scan_config.json
nb_venv_kernels/tests/: __init__.py  test_api.py  test_manager.py  test_registry.py  test_routes.py
src/: index.ts  request.ts
src/__tests__/: nb_uv_kernel.spec.ts  nb_venv_kernel.spec.ts
ui-tests/: package.json
ui-tests/tests/: nb_uv_kernel.spec.ts  nb_venv_kernel.spec.ts
